--- a/src/index.css
+++ b/src/index.css
@@ -8,3 +8,13 @@
   font-family: "Poppins", sans-serif;
   box-sizing: border-box;
 }
+
+/* html {
+  scroll-behavior: smooth;
+} */
+/* body {
+  background-color: #f7fafc;
+  color: #2d3748;
+  line-height: 1.6;
+  font-size: 1rem;
+} */
