--- a/src/index.css
+++ b/src/index.css
@@ -9,12 +9,14 @@
   box-sizing: border-box;
 }
 
-/* html {
+html, body {
+  width: 100%;
+  overflow-x: hidden; /* Only here! */
   scroll-behavior: smooth;
-} */
-/* body {
-  background-color: #f7fafc;
-  color: #2d3748;
-  line-height: 1.6;
-  font-size: 1rem;
-} */
+}
+
+/* Basic Reset Example */
+body, h1, h2, h3, h4, h5, h6, p, ul, li {
+  margin: 0;
+  padding: 0;
+}
