--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,10 +1,15 @@
 /* Header Section Styles */
 .header {
-  min-height: 100vh;
   width: 100%;
-  background-image: linear-gradient(rgba(4, 9, 30, 0.7), rgba(4, 9, 30, 0.7)),
-    url(/images/banner.png);
   background-position: center;
   background-size: cover;
-  position: relative;
+  position: fixed; 
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start; /* aligns content below navbar */
+  overflow: hidden;
+  outline: 2px solid red;
+  z-index: 10000; /* Ensure header stays above other content */
+  top: 0;
+  left: 0;
 }
